# mandatum

./: .gitignore  AGENTS.md  Makefile  README.md  mandatum.yaml
agents/: Dockerfile  common-task.sh  run-all.sh  run-coder.sh  run-docs.sh  run-reviewer.sh  run-tester.sh
agents/claude/: mcp-config-docker.json  mcp-config.json  planner-prompt.md  run-all.sh  run-coder.sh  run-docs.sh  run-planner.sh  run-reviewer.sh  run-tester.sh
agents/codex/: common.sh  run-all.sh  run-coder.sh  run-docs.sh  run-planner.sh  run-reviewer.sh  run-tester.sh
server/: Cargo.toml  seed.sh  tasks.db-shm  tasks.db-wal
server/src/: config.rs  db.rs  git.rs  main.rs  mcp.rs  metrics.rs  spawner.rs  sse.rs  tools.rs
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  api.ts  index.css  main.tsx  types.ts
ui/src/components/: ActivityFeed.tsx  AgentBadge.tsx  AgentLogModal.tsx  AgentsPanel.tsx  Board.tsx  CreateTaskModal.tsx  StatsBar.tsx  TaskCard.tsx  TaskModal.tsx
